# openedr

./: CONTRIBUTING.md  LICENSE.md  README.md
edrav2/eprj/awssdkcpp/: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE.txt  README.md  attribution  build.cmd  buildspec.yml
edrav2/eprj/awssdkcpp/aws-cpp-sdk-core/: .gitattributes  CMakeLists.txt
edrav2/eprj/awssdkcpp/aws-cpp-sdk-firehose/: CMakeLists.txt
edrav2/eprj/awssdkcpp/cmake/: AWSSDKConfig.cmake  build_external.cmake  compiler_settings.cmake  dependencies.cmake  external_dependencies.cmake  initialize_project_version.cmake  make_uninstall.cmake  resolve_platform.cmake  sdks.cmake  sdksCommon.cmake  setup_cmake_find_module.cmake  utilities.cmake
edrav2/eprj/awssdkcpp/toolchains/: cmakeProjectConfig.cmake  core-config.cmake  pkg-config.pc.in
edrav2/eprj/jsonrpccpp/: .dockerignore  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  build.cmd  codecov.yml
edrav2/eprj/jsonrpccpp/cmake/: CMakeCompilerSettings.cmake  CMakeDependencies.cmake  CMakePackaging.cmake  FindArgtable.cmake  FindCatch.cmake  FindHiredis.cmake  FindJsoncpp.cmake  FindSocket.cmake  FindThreads.cmake  HunterGate.cmake  cmake_uninstall.cmake.in  cross-mingw32-linux.cmake  libjson-rpc-cppConfig.cmake.in  libjsonrpccpp-client.pc.cmake  libjsonrpccpp-common.pc.cmake  libjsonrpccpp-server.pc.cmake  libjsonrpccpp-stub.pc.cmake
edrav2/eprj/jsonrpccpp/dev/: codecov.sh  source-ship.py
edrav2/eprj/jsonrpccpp/doc/: doxyfile.in  manpage.in
edrav2/eprj/jsonrpccpp/docker/: ArchLinux.Dockerfile  Debian10.Dockerfile  Debian8.Dockerfile  Debian9.Dockerfile  Fedora.Dockerfile  Makefile  Ubuntu1604.Dockerfile  Ubuntu1804.Dockerfile  build_test_install.sh
edrav2/eprj/libmicrohttpd/: .gitattributes  .gitignore  AUTHORS  COPYING  ChangeLog  MHD_config.h.in  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  libmicrohttpd.pc.in
edrav2/eprj/libmicrohttpd/contrib/: Makefile.am  Makefile.in
edrav2/eprj/libmicrohttpd/doc/: Makefile.am  Makefile.in  ecos.texi  libmicrohttpd-tutorial.info  libmicrohttpd-tutorial.texi  libmicrohttpd.3  libmicrohttpd.info  libmicrohttpd.texi  libmicrohttpd_performance_data.eps  stamp-vti
edrav2/eprj/libmicrohttpd/include/: microhttpd.h
edrav2/eprj/libmicrohttpd/m4/: Makefile.am  Makefile.in  libgcrypt.m4  mhd_check_func.m4  mhd_shutdown_socket_trigger.m4  mhd_sys_extentions.m4  search_h.m4  tsearch.m4
edrav2/eprj/libmicrohttpd/po/: ChangeLog  Makevars  POTFILES.in  configure  configure.ac  configure.ac.in  libmicrohttpd.pot
edrav2/eprj/libmicrohttpd/src/: Makefile.am  Makefile.in
edrav2/eprj/log4cplus/: .dir-locals.el  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ConfigureChecks.cmake  INSTALL  LICENSE  Log4CPlusCPack.cmake  Log4CPlusUtils.cmake  Makefile.am  Makefile.am.def  Makefile.am.tpl  Makefile.in  NEWS  README.md  REVISION  TODO  acinclude.m4  aclocal.m4  appveyor.yml  build.cmd  configure  configure.ac  log4cplus.pc.in  log4cplus.spec  mingw-log4cplus.spec
edrav2/eprj/log4cplus/.github/: issue_template.md
edrav2/eprj/log4cplus/cygport/: log4cplus.cygport
edrav2/eprj/log4cplus/docs/: doxygen.config  examples.md  log4cplus.ps  release.txt  unicode.txt  webpage_doxygen.config
edrav2/eprj/log4cplus/iOS/: ConfigureChecks.cmake  README.md
edrav2/eprj/log4cplus/include/: Makefile.am  Makefile.am.def  Makefile.am.tpl  Makefile.in
edrav2/eprj/log4cplus/jenkins/: build.xml
edrav2/eprj/log4cplus/m4/: ax_append_flag.m4  ax_c_ifdef.m4  ax_cflags_aix_option.m4  ax_cflags_gcc_option.m4  ax_cflags_sun_option.m4  ax_cflags_warn_all.m4  ax_compiler_vendor.m4  ax_declspec.m4  ax_gcc_func_attribute.m4  ax_gcc_var_attribute.m4  ax_getaddrinfo.m4  ax_gethostbyname_r.m4  ax_log4cplus_wrappers.m4  ax_macro_function.m4  ax_pkg_swig.m4  ax_pthread.m4  ax_swig_multi_module_support.m4  ax_tls_support.m4  ax_type_socklen_t.m4
edrav2/eprj/log4cplus/msvc14/: CLFSAppender.props  CLFSAppender.vcxproj  MSTTSAppender.props  MSTTSAppender.vcxproj  Qt4DebugAppender.props  Qt4DebugAppender.vcxproj  Qt5DebugAppender.props  Qt5DebugAppender.vcxproj  log4cplus.props  log4cplus.sln  log4cplus.vcxproj  log4cplus.vcxproj.filters  log4cplusS.vcxproj  log4cplusS.vcxproj.filters  log4cplus_debug.props  log4cplus_release.props  log4cplus_static.props  loggingserver.props  loggingserver.vcxproj  loggingserver.vcxproj.filters
edrav2/eprj/log4cplus/qt4debugappender/: CMakeLists.txt  Makefile.am  qt4debugappender.cxx
edrav2/eprj/log4cplus/qt5debugappender/: CMakeLists.txt  Makefile.am  qt5debugappender.cxx
edrav2/eprj/log4cplus/scripts/: autogen.sh  build-pdf.pl  clean_cmake_files.bat  clean_cmake_files.sh  doautoreconf.sh  fix-timestamps.sh  msvc10_to_msvc11.cmd  msvc10_to_msvc12.cmd  prepare_dist_from_git.sh  propagate-version.pl  update_copyrights.sh  upload_to_wiki.pl
edrav2/eprj/log4cplus/simpleserver/: CMakeLists.txt  Makefile.am  Makefile.in  loggingserver.cxx
edrav2/eprj/log4cplus/src/: CMakeLists.txt  Makefile.am  appender.cxx  appenderattachableimpl.cxx  asyncappender.cxx  callbackappender.cxx  clfsappender.cxx  clogger.cxx  configurator.cxx  connectorthread.cxx  consoleappender.cxx  cygwin-win32.cxx  env.cxx  factory.cxx  fileappender.cxx  fileinfo.cxx  filter.cxx  global-init.cxx  hierarchy.cxx  hierarchylocker.cxx  layout.cxx  lockfile.cxx  log4cplus.rc.in  log4judpappender.cxx  logger.cxx  loggerimpl.cxx  loggingevent.cxx  loggingmacros.cxx  loglevel.cxx  loglog.cxx  mdc.cxx  msttsappender.cxx  ndc.cxx  nteventlogappender.cxx  nullappender.cxx  objectregistry.cxx  patternlayout.cxx  pointer.cxx  property.cxx  queue.cxx  (+19 more)
edrav2/eprj/log4cplus/swig/: Makefile.common.am  configurator.swg  hierarchy.swg  log4cplus.swg  logger.swg  loggingevent.swg
edrav2/eprj/log4cplus/tests/: CMakeLists.txt  Makefile.am  Makefile.am.def  Makefile.am.tpl  appender_test.at  atlocal.in  configure.m4  (+19 more)
edrav2/eprj/uri/: .travis.yml  CMakeLists.txt  Directory.Build.props  Doxyfile.in  README.rst  build.cmd
(+7311 files in other folders)
